# a2a-rs

./: .gitignore  0.3_UPDATE_PLAN.md  A2A_COMPLIANCE_ASSESSMENT.md  A2A_SPEC_COMPLIANCE_REPORT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECLARATIVE_AGENTS.md  DECLARATIVE_AGENTS_TODO.md  ISSUES.md  JSONRPC_ADAPTER_PLAN.md  OFFICIAL_SDK_COMPARISON.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  TODO.md  clippy_output.txt  clippy_output_utf8.txt  release-plz.toml  server_log.txt
a2a-agent-reimbursement/: Cargo.toml  README.md  reimbursement.toml
a2a-agent-reimbursement/examples/: full_server.rs  simple.rs
a2a-agent-reimbursement/src/: handler.rs  lib.rs  plugin.rs  server.rs
a2a-agents/: AUTHENTICATION.md  BUILDER_API.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  STORAGE.md  TODO.md  config.apikey.example.json  config.auth.example.json  config.example.json  config.sqlx.example.json  reimbursement.toml
a2a-agents-common/: CHANGELOG.md  Cargo.toml  README.md
a2a-agents-common/src/: lib.rs
a2a-agents-common/src/caching/: mod.rs
a2a-agents-common/src/formatting/: markdown.rs  mod.rs  table.rs
a2a-agents-common/src/llm/: gemini.rs  mod.rs  openai.rs  provider.rs  tool_call.rs
a2a-agents-common/src/nlp/: entity.rs  intent.rs  mod.rs
a2a-agents-common/src/testing/: fixtures.rs  mod.rs
a2a-agents-common/tests/: integration_test.rs
a2a-agents/examples/: MCP_INTEGRATION.md  ap2_merchant.toml  ap2_merchant_agent.rs  auto_storage.toml  auto_storage_agent.rs  auto_storage_sqlx.rs  auto_storage_sqlx.toml  complex_agent.rs  complex_agent.toml  jwt_auth.toml  keycloak-quickstart.sh  keycloak_jwt.toml  keycloak_oauth2.toml  llm_agent.rs  llm_agent.toml  mcp_client_agent.rs  mcp_client_agent.toml  mcp_http_agent.rs  mcp_http_agent.toml  mcp_server_agent.rs  mcp_server_agent.toml  minimal_agent.rs  minimal_agent.toml  oauth2_auth.toml  oauth2_client_credentials.toml  orchestrator_agent.toml  print_schema.rs  registry_orchestrator.toml  registry_worker.toml  reimbursement_builder.rs  stock_agent_types.rs  test_config_demo.rs  test_handler.rs  test_metadata.rs  test_metrics.rs  test_sqlx_storage.rs
a2a-agents/src/: lib.rs
a2a-agents/src/agents/: mod.rs
a2a-agents/src/control_plane/: http.rs  mod.rs
a2a-agents/src/core/: builder.rs  config.rs  mcp.rs  mcp_client.rs  mod.rs  runtime.rs  server.rs
a2a-agents/src/handlers/: llm.rs  mod.rs  tools.rs
a2a-agents/src/registry/: mod.rs
a2a-agents/src/reimbursement_agent/: agent.rs  config.rs  handler.rs  message_handler.rs  mod.rs  modern_server.rs  server.rs  task_manager.rs  types.rs
a2a-agents/src/runtime/: container.rs  local.rs  memory.rs  mod.rs
a2a-agents/src/traits/: mcp_tools.rs  mod.rs  plugin.rs
a2a-agents/src/utils/: mod.rs  parsing.rs
a2a-agents/templates/: index.html
a2a-agents/tests/: agent_as_tool_test.rs  container_runtime_test.rs  control_plane_test.rs  local_runtime_test.rs  mcp_client_test.rs  mcp_http_test.rs  mcp_smoke_test.rs  registry_discovery_test.rs
a2a-ap2/: CHANGELOG.md  Cargo.toml
a2a-ap2/examples/: payment_flow.rs
a2a-ap2/src/: error.rs  extension.rs  helpers.rs  lib.rs  validation.rs
a2a-ap2/src/types/: contact.rs  mandate.rs  mod.rs  payment_request.rs  receipt.rs  roles.rs
a2a-client/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
a2a-client/examples/: basic_client.rs  simple_chat.rs  sse_streaming.rs  sse_streaming_index.html  websocket_test.rs
a2a-client/src/: error.rs  lib.rs  styles.css
a2a-client/src/client/: error.rs  mod.rs  ws.rs
a2a-client/src/components/: chat.rs  mod.rs  streaming.rs  task_viewer.rs
a2a-client/src/utils/: formatters.rs  mod.rs
a2a-client/templates/: chat.html  index.html
a2a-client/tests/: e2e_framework_lifecycle_test.rs  http_streaming_test.rs  sse_streaming_test.rs
a2a-mcp/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  a2a-mcp-report.md
a2a-mcp/examples/: a2a_as_mcp_server.rs  a2a_with_mcp_tools.rs  bidirectional_demo.rs  minimal_example.rs
a2a-mcp/old_examples/: a2a_agents_as_tools.rs  rmcp_server_as_agent.rs
a2a-mcp/src/: client.rs  error.rs  lib.rs
a2a-mcp/src/bridge/: agent_to_mcp.rs  mcp_to_a2a.rs  mod.rs
a2a-mcp/src/converters/: llm_tool.rs  message.rs  mod.rs  skill_tool.rs  task_result.rs
a2a-mcp/tests/: agent_to_mcp_integration.rs  bidirectional_integration.rs  mcp_to_a2a_integration.rs
a2a-rs/: CHANGELOG.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md  TODO.md  build.rs  run_examples.sh
a2a-rs/benches/: a2a_performance.rs
a2a-rs/examples/: builder_patterns.rs  http_client.rs  http_client_server.rs  http_server.rs  jsonrpc_client.rs  jsonrpc_server.rs  sqlx_storage_demo.rs  storage_comparison.rs  v03_security_example.rs  websocket_client.rs  websocket_client_server.rs  websocket_server.rs
a2a-rs/examples/common/: mod.rs  simple_agent_handler.rs
a2a-rs/migrations/: 002_v030_push_configs_postgres.sql  003_task_version.sql
a2a-rs/src/: lib.rs
a2a-rs/src/adapter/: interceptor.rs  mod.rs
a2a-rs/src/application/: json_rpc.rs  mod.rs  task_service.rs  (+1 more)
a2a-rs/tests/: authenticated_card_test.rs  client_v3_methods_test.rs  in_memory_storage_v3_test.rs  integration_test.rs  jsonrpc_client_interop_test.rs  jsonrpc_dispatch_test.rs  jsonrpc_router_test.rs  jsonrpc_wire_test.rs  message_api_integration_test.rs  message_api_test.rs  multi_transport_integration_test.rs  property_based_test.rs  proto_vendor_sync_test.rs  push_notification_crud_test.rs  push_notification_test.rs  retry_transport_test.rs  spec_compliance_test.rs  sqlx_storage_test.rs  streaming_events_test.rs  task_list_test.rs  transport_negotiation_test.rs  v3_request_response_test.rs  websocket_test.rs
a2acli/: CHANGELOG.md  Cargo.toml  README.md
a2acli/src/: main.rs
test-zai/: .gitignore  Cargo.toml  GGEN_README.md  README.md  ggen.toml
test-zai/examples/: a2a_debate.rs  a2a_self_play.rs  a2a_tool_agents.rs  ggen_construct_prompts.rs  ontology_driven_prompts.rs  simple_self_play.rs  tool_calling_agents.rs
test-zai/src/: construct_gen.rs  lib.rs  main.rs
test-zai/templates/: agent_module.rs.tera  construct_base.tera
(+148 files in other folders)
