[package]
name = "a2a-agents-common"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Common utilities for building A2A Protocol agents"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "agent", "utilities", "nlp", "formatting"]
categories = ["api-bindings", "text-processing"]

[dependencies]
# No circular dependency with a2a-agents allowed

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text processing and regex
regex = "1.10"

# Date and time utilities
chrono = { version = "0.4", features = ["serde"] }

# LLM support
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
eventsource-stream = "0.2"
async-stream = "0.3"

# Async support
tokio = { version = "1.32", features = ["sync", "time"], optional = true }
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Caching (optional)
moka = { version = "0.12", features = ["future"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tokio = { version = "1.32", features = ["rt", "macros", "test-util"] }
a2a-agents = { path = "../a2a-agents" }

[[test]]
name = "integration_test"
required-features = ["async"]

[features]
default = []
# Enable async utilities (caching, etc.)
async = ["dep:tokio", "dep:moka"]
# Enable all features
full = ["async"]
