[package]
name = "a2a-agents-common"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Common utilities for building A2A Protocol agents"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "agent", "utilities", "nlp", "formatting"]
categories = ["api-bindings", "text-processing"]

[dependencies]
# No circular dependency with a2a-agents allowed

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Text processing and regex
regex = "1.10"

# Date and time utilities
chrono = { workspace = true }

# LLM support
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
eventsource-stream = "0.2"
async-stream = "0.3"

# Async support
tokio = { workspace = true, features = ["sync", "time"], optional = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Caching (optional)
moka = { version = "0.12", features = ["future"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }

[[test]]
name = "integration_test"
required-features = ["async"]

[features]
default = []
# Enable async utilities (caching, etc.)
async = ["dep:tokio", "dep:moka"]
# Enable all features
full = ["async"]
