[package]
name = "a2a-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
a2a-rs = { path = "../a2a-rs", features = ["full"] }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
base64 = "0.21"
url = { version = "2.4", features = ["serde"] }
lazy_static = "1.4"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
tracing-subscriber = "0.3"

# Async foundation
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
async-trait = { version = "0.1" }
futures = { version = "0.3" }

# HTTP client - optional
reqwest = { version = "0.11", features = ["json"], optional = true }

# WebSocket - optional
tokio-tungstenite = { version = "0.20", optional = true }

axum = { version = "0.8", optional = true }

# Logging
tracing = { version = "0.1" }

[features]
http-server = ["dep:axum"]
ws-server = ["dep:tokio-tungstenite"]


[[bin]]
name = "reimbursement_server"
path = "bin/reimbursement_server.rs"
required-features = ["http-server"]


