[package]
name = "a2a-agents"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Framework for building A2A Protocol agents with declarative configuration"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "agent", "framework", "toml"]
categories = ["api-bindings", "network-programming"]

[dependencies]
a2a-rs = { path = "../a2a-rs", version = "0.2", features = ["server", "http-server", "ws-server", "http-client", "tracing"] }
a2a-ap2 = { path = "../a2a-ap2", version = "0.2", optional = true }
a2a-client = { package = "a2a-web-client", path = "../a2a-client", version = "0.2" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
bon = "2.3"
dotenvy = "0.15.7"
shellexpand = "3.1"

# Async foundation
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
async-trait = "0.1"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Required dependencies
regex = "1.10"  # Used for text parsing and config env var expansion

# AI integration (OpenAI-compatible API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# OAuth2 support (optional, for auth feature)
oauth2 = { version = "5.0", optional = true }

# Frontend dependencies
axum = { version = "0.7", features = ["multipart"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
base64 = "0.22"
futures = "0.3"
anyhow = "1.0"

[package.metadata.docs.rs]
features = ["reimbursement-agent", "sqlx", "ap2", "auth"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reimbursement-agent", "sqlx"]
reimbursement-agent = []
ap2 = ["dep:a2a-ap2"]
sqlx = ["a2a-rs/sqlite"]
auth = ["a2a-rs/auth", "dep:oauth2"]
# MCP features require a local MCP SDK checkout (not yet published to crates.io).
# These are declared so cfg(feature) checks compile, but cannot be enabled without
# adding the rmcp dependency locally.
mcp-server = []
mcp-client = []


[[bin]]
name = "reimbursement_demo"
path = "bin/reimbursement_demo.rs"
required-features = ["reimbursement-agent"]

[[example]]
name = "test_handler"
path = "examples/test_handler.rs"
required-features = ["reimbursement-agent"]

[[example]]
name = "minimal_agent"
path = "examples/minimal_agent.rs"

[[example]]
name = "reimbursement_builder"
path = "examples/reimbursement_builder.rs"
required-features = ["reimbursement-agent", "sqlx"]

[[example]]
name = "auto_storage_agent"
path = "examples/auto_storage_agent.rs"

[[example]]
name = "auto_storage_sqlx"
path = "examples/auto_storage_sqlx.rs"
required-features = ["sqlx"]

[[example]]
name = "ap2_merchant_agent"
path = "examples/ap2_merchant_agent.rs"
required-features = ["ap2"]



