[package]
name = "a2a-agents"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Framework for building A2A Protocol agents with declarative configuration"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "agent", "framework", "toml"]
categories = ["api-bindings", "network-programming"]

[dependencies]
a2a-rs = { path = "../a2a-rs", version = "0.4", features = ["server", "http-server", "http-client", "tracing"] }
a2a-agents-common = { path = "../a2a-agents-common", version = "0.3" }
a2a-ap2 = { path = "../a2a-ap2", version = "0.3", optional = true }
a2a-client = { package = "a2a-web-client", path = "../a2a-client", version = "0.4" }
a2a-mcp = { path = "../a2a-mcp", version = "0.4", optional = true }
rmcp = { version = "1.7", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server"], optional = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
buffa = { version = "0.3.0", features = ["json"] }
buffa-types = { version = "0.3.0", features = ["json"] }
toml = "0.8"
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
bon = { workspace = true }
dotenvy = "0.15.7"
shellexpand = "3.1"

# JSON Schema export for the declarative config (Terraform provider validation).
# Optional: only the `schema` feature and `--print-schema` need it.
schemars = { version = "1.0", features = ["chrono04"], optional = true }

# Async foundation
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }
async-trait = { workspace = true }

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Required dependencies
regex = "1.10"  # Used for text parsing and config env var expansion

# AI integration (OpenAI-compatible API)
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# OAuth2 support (optional, for auth feature)
oauth2 = { version = "5.0", optional = true }

# Frontend dependencies
axum = { version = "0.7", features = ["multipart"] }
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
base64 = "0.22"
futures = { workspace = true }
anyhow = { workspace = true }

[package.metadata.docs.rs]
features = ["reimbursement-agent", "sqlx", "ap2", "auth", "schema"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["reimbursement-agent", "sqlx"]
reimbursement-agent = []
ap2 = ["dep:a2a-ap2"]
sqlx = ["a2a-rs/sqlite"]
auth = ["a2a-rs/auth", "dep:oauth2"]
# JSON Schema export for `AgentConfig` (used by the Terraform provider and the
# `a2a --print-schema` subcommand to validate agent definitions).
schema = ["dep:schemars"]
# Generic LLM handler (`LlmHandler`) + its tool-calling loop. Independent of MCP:
# an LLM agent can delegate to peer A2A agents (`A2aAgentToolSource`) with no
# `rmcp`. Enable `mcp-server` *as well* to also feed it MCP-server tools.
llm = []
# MCP server: expose any TOML-configured agent as an MCP stdio server via
# `a2a-mcp::AgentToMcpBridge`. Pulls in `a2a-mcp` and the matching `rmcp` build.
mcp-server = ["dep:a2a-mcp", "dep:rmcp"]
# MCP client: lets an agent call out to external MCP servers (spawned as child
# processes), discover their tools, and invoke them while serving A2A requests.
# Build an `McpClientManager` from `[features.mcp_client]` config with
# `McpClientManager::connect`, hand it to your handler, and reach tools through
# the `McpToolsExt` trait. See `examples/mcp_client_agent.rs`.
mcp-client = ["dep:rmcp"]

[[bin]]
name = "a2a"
path = "bin/a2a.rs"
required-features = ["reimbursement-agent", "llm", "mcp-server", "schema"]

[[bin]]
name = "reimbursement_demo"
path = "bin/reimbursement_demo.rs"
required-features = ["reimbursement-agent"]

# Minimal MCP stdio server (echo + add) — fixture for the mcp-client example and
# integration test, so they can spawn a real MCP server with no external deps.
[[bin]]
name = "mcp_echo_server"
path = "bin/mcp_echo_server.rs"
required-features = ["mcp-client"]

[[example]]
name = "test_handler"
path = "examples/test_handler.rs"
required-features = ["reimbursement-agent"]

[[example]]
name = "minimal_agent"
path = "examples/minimal_agent.rs"

[[example]]
name = "reimbursement_builder"
path = "examples/reimbursement_builder.rs"
required-features = ["reimbursement-agent", "sqlx"]

[[example]]
name = "auto_storage_agent"
path = "examples/auto_storage_agent.rs"

[[example]]
name = "auto_storage_sqlx"
path = "examples/auto_storage_sqlx.rs"
required-features = ["sqlx"]

[[example]]
name = "ap2_merchant_agent"
path = "examples/ap2_merchant_agent.rs"
required-features = ["ap2"]

[[example]]
name = "mcp_server_agent"
path = "examples/mcp_server_agent.rs"
required-features = ["mcp-server"]

[[example]]
name = "mcp_http_agent"
path = "examples/mcp_http_agent.rs"
required-features = ["mcp-server"]

# Agent that acts as an MCP *client*: connects to an MCP server (the bundled
# mcp_echo_server) from TOML config and calls its tools while serving A2A.
[[example]]
name = "mcp_client_agent"
path = "examples/mcp_client_agent.rs"
required-features = ["mcp-client"]

# Kitchen-sink example: TOML config + optional LLM tool-calling + MCP tool
# consumption (McpToA2ABridge) + live SSE streaming + native task lifecycle.
[[example]]
name = "complex_agent"
path = "examples/complex_agent.rs"
required-features = ["mcp-server"]

# TOML-only LLM-driven agent: no Rust code, drives the generic `llm` handler
# registered in the `a2a` binary. Proves the config-as-artifact path.
[[example]]
name = "llm_agent"
path = "examples/llm_agent.rs"
required-features = ["llm"]
[[example]]
name = "print_schema"
path = "examples/print_schema.rs"
required-features = ["schema"]

[dev-dependencies]
# Pull in the JSON-RPC server + client transports so integration tests can stand
# up a real A2A agent on a socket and drive it through the Transport port
# (e.g. the agent-as-tool delegation test).
a2a-rs = { path = "../a2a-rs", features = ["jsonrpc-server", "jsonrpc-client"] }
# a2a-rs serves on axum 0.8 while this crate's frontend is on 0.7; alias the 0.8
# build for tests so `jsonrpc_router`'s Router matches the `serve` we call.
axum8 = { package = "axum", version = "0.8" }
