[package]
name = "a2a-rs-client"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Generic web client library for building A2A agent frontends"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "agent", "client", "web"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "a2a_client"

[dependencies]
# A2A integration
# Note: We need "server" feature for the port traits even though this is a client library
a2a-rs = { path = "../a2a-rs", version = "0.2", features = ["http-client", "ws-client", "server", "tracing"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["time"] }

# Web framework
axum = { version = "0.7", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Async streams
futures = "0.3"
async-stream = { version = "0.3", optional = true }

# UUID generation
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["axum-components"]
axum-components = ["dep:axum", "dep:async-stream"]
