[package]
name = "a2a-mcp"
version = "0.1.0"
edition = "2021"
authors = ["A2A-RS Contributors"]
description = "Bidirectional integration between A2A Protocol and Model Context Protocol (MCP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/username/a2a-rs"
keywords = ["a2a", "mcp", "rmcp", "ai", "agent"]
categories = ["ai", "network-programming"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "client", "macros", "transport-io", "elicitation", "schemars", "base64"] }
rmcp-macros = "1.7"

# A2A core library
a2a-rs = { path = "../a2a-rs", version = "0.2", features = ["http-client", "http-server", "client", "server"], default-features = false }
a2a-agents-common = { path = "../a2a-agents-common" }
connectrpc = { version = "0.3.2" }
buffa = { version = "0.3.0", features = ["json"] }
buffa-types = { version = "0.3.0", features = ["json"] }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Schema generation (matching rmcp's version)
schemars = { version = "1.0", features = ["chrono04"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[features]
default = []
