[package]
name = "a2a-mcp"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Bidirectional integration between A2A Protocol and Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "mcp", "rmcp", "ai", "agent"]
categories = ["api-bindings", "network-programming"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "client", "macros", "transport-io", "elicitation", "schemars", "base64"] }
rmcp-macros = "1.7"

# A2A core library
a2a-rs = { path = "../a2a-rs", version = "0.3", features = ["http-client", "http-server", "client", "server"], default-features = false }
a2a-agents-common = { path = "../a2a-agents-common", version = "0.3" }
connectrpc = { version = "0.3.2" }
buffa = { version = "0.3.0", features = ["json"] }
buffa-types = { version = "0.3.0", features = ["json"] }

# Async runtime and utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Schema generation (matching rmcp's version)
schemars = { version = "1.0", features = ["chrono04"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[features]
default = []
