[package]
name = "a2a-mcp"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Bidirectional integration between A2A Protocol and Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "mcp", "rmcp", "ai", "agent"]
categories = ["api-bindings", "network-programming"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "client", "macros", "transport-io", "elicitation", "schemars", "base64"] }
rmcp-macros = "1.7"

# A2A core library
a2a-rs = { path = "../a2a-rs", version = "0.4", features = ["http-client", "http-server", "client", "server"], default-features = false }
a2a-agents-common = { path = "../a2a-agents-common", version = "0.4" }
connectrpc = { version = "0.3.2" }
buffa = { version = "0.3.0", features = ["json"] }
buffa-types = { version = "0.3.0", features = ["json"] }

# Async runtime and utilities
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Schema generation (matching rmcp's version)
schemars = { version = "1.0", features = ["chrono04"] }

# Date/time
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[features]
default = []
