[package]
name = "a2a-rs"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Rust implementation of the Agent-to-Agent (A2A) Protocol"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
readme = "README.md"
keywords = ["agent", "protocol", "jsonrpc", "a2a"]
categories = ["api-bindings", "network-programming"]

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
base64 = "0.21"
url = { version = "2.4", features = ["serde"] }
bon = { workspace = true }

# Database - optional
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "uuid", "json"], optional = true }

# Async foundation
# async-trait and futures are non-optional: the port layer (e.g. the always-on
# Authenticator trait) uses them unconditionally, so domain + port must compile
# with zero features. tokio stays optional — only adapters need a runtime.
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time"], optional = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP client - optional
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"], optional = true }


# HTTP server - optional
axum = { version = "0.8", optional = true }

# Authentication - optional
jsonwebtoken = { version = "9.3", optional = true }
oauth2 = { version = "5.0", optional = true }
openidconnect = { version = "4.0", optional = true }

# Logging - optional
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
connectrpc = { version = "0.3.2", features = ["tls", "axum"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
buffa = { version = "0.3.0", features = ["json"] }
buffa-types = { version = "0.3.0", features = ["json"] }
http = "1.0"
http-body = "1.0.1"
prost = "0.14.3"
prost-types = "0.14.3"

[dev-dependencies]
# Testing dependencies
proptest = "1.4"
proptest-derive = "0.5"
jsonschema = "0.22"
criterion = { version = "0.5", features = ["html_reports"] }
arbitrary = { version = "1.3", features = ["derive"] }
# Drives the axum routers via `ServiceExt::oneshot` in the JSON-RPC router tests.
tower = { version = "0.5", features = ["util"] }

[features]
default = ["server", "tracing"]
client = ["dep:tokio"]
http-client = ["client", "dep:reqwest"]
# Wire-compatible JSON-RPC 2.0 client adapter (reqwest over the spec-mandated
# JSON-RPC + SSE wire format). Lets our client talk to any standard A2A agent.
jsonrpc-client = ["client", "dep:reqwest"]

server = ["dep:tokio"]
http-server = ["server", "dep:axum"]
# Wire-compatible JSON-RPC 2.0 + HTTP+JSON (REST) transport adapter. Needs axum
# for its routers; the dispatch core itself only needs `server`.
jsonrpc-server = ["server", "dep:axum"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

auth = ["dep:jsonwebtoken", "dep:oauth2", "dep:openidconnect", "dep:reqwest"]
sqlx-storage = ["server", "dep:sqlx"]
sqlite = ["sqlx-storage", "sqlx/sqlite"]
postgres = ["sqlx-storage", "sqlx/postgres"]
mysql = ["sqlx-storage", "sqlx/mysql"]
full = ["http-client", "http-server", "jsonrpc-server", "jsonrpc-client", "tracing", "auth", "sqlite", "postgres"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "http_client_server"
path = "examples/http_client_server.rs"
required-features = ["http-server", "http-client"]

[[example]]
name = "jsonrpc_server"
path = "examples/jsonrpc_server.rs"
required-features = ["jsonrpc-server"]

[[example]]
name = "jsonrpc_client"
path = "examples/jsonrpc_client.rs"
required-features = ["jsonrpc-client"]


[[example]]
name = "sqlx_storage_demo"
path = "examples/sqlx_storage_demo.rs"
required-features = ["sqlx-storage", "tracing"]

[[example]]
name = "storage_comparison"
path = "examples/storage_comparison.rs"
required-features = ["server", "tracing"]

[[bench]]
name = "a2a_performance"
harness = false
required-features = ["full"]

[build-dependencies]
connectrpc-build = "0.3.2"
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
