[package]
name = "a2acli"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
authors = ["Emil Lindfors <emil@lindfors.no>"]
description = "Command-line client for the Agent-to-Agent (A2A) protocol"
license = "MIT"
repository = "https://github.com/emillindfors/a2a-rs"
keywords = ["a2a", "agent", "cli", "client"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "a2acli"
path = "src/main.rs"

[dependencies]
# Drive the client `Transport` port from a2a-rs directly (not a2a-client, which
# drags in axum/askama for zero CLI benefit). Both wire transports compiled in.
a2a-rs = { path = "../a2a-rs", version = "0.4", default-features = false, features = [
    "http-client",
    "jsonrpc-client",
    "tracing",
] }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
